--- a/svc.yml
+++ b/svc.yml
@@ -10,5 +10,5 @@ spec:
       port: 80
       nodePort: 31010
   selector:
-    devops_new_capstone1: devops_new_capstone1
+    devops-new-capstone1: devops-new-capstone1
 ...
